tests/ui/item.stderr
error: #[tag] at an invalid position
 --> $DIR/item.rs:7:5
  |
7 |     #[tag = 1]
  |     ^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/item.rs:13:5
   |
13 |     #[optional]
   |     ^^^^^^^^^^^

error: #[flatten] at an invalid position
  --> $DIR/item.rs:19:5
   |
19 |     #[flatten]
   |     ^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:25:5
   |
25 |     #[untagged]
   |     ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:29:5
   |
29 |     #[untagged]
   |     ^^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/item.rs:37:5
   |
37 |     #[tag = 1]
   |     ^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/item.rs:43:5
   |
43 |     #[optional]
   |     ^^^^^^^^^^^

error: #[flatten] at an invalid position
  --> $DIR/item.rs:49:5
   |
49 |     #[flatten]
   |     ^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:55:5
   |
55 |     #[untagged]
   |     ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:59:5
   |
59 |     #[untagged]
   |     ^^^^^^^^^^^
